fix printing gap for namelist and break after on print

--- a/src/styles/print.css
+++ b/src/styles/print.css
@@ -12,7 +12,7 @@
 
   .page-break {
     display: block; /* Make the element visible for printing */
-    page-break-before: always; /* Force a page break before this element */
+    break-after: always; /* Force a page break before this element */
   }
 
   .not-print {
@@ -32,7 +32,7 @@
   }
 
   .container,
-  section,
+  .section,
   table,
   tr,
   td {
